--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,11 @@ h1{
     text-align: center;
     font-size: 25px;
 }
+nav{
+    float: right;
+}
+nav a{
+    font-size: 20px;
+    text-decoration: none;
+    font-family: 'Times New Roman', Times, serif;
+}
