--- a/styles.css
+++ b/styles.css
@@ -45,3 +45,68 @@ height: 10rem;
         max-width: 100%;
         height: auto; /* Conserver le ratio d'aspect des images */
 }
+.image-container {
+    position: relative;
+    display: inline-block;
+}
+
+.imghaut1 {
+    width: 30%; /* ou une taille spécifique si nécessaire */
+    height: 30%; /* ajuster en fonction de tes besoins */
+}
+
+.text-overlay {
+    position: absolute;
+    top: 50%; /* centrer verticalement */
+    left: 12%; /* centrer horizontalement */
+    transform: translate(-50%, -50%); /* ajustement pour centrer */
+    color: white; /* couleur du texte */
+    font-size: 16px; /* taille du texte */
+    font-weight: bold;
+    background-color: rgba(167, 27, 27, 0.662); /* fond semi-transparent */
+    padding: 10px; /* espace autour du texte */
+    border-radius: 5px; /* bordure arrondie */
+    margin-top: 6rem;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
+}
+form{
+    display: flexbox;
+    background-color:rgba(165, 42, 42, 0.306);
+    justify-content: center;
+    margin-left: 20rem;
+    margin-right: 20rem;
+    height: 30rem;
+
+}
+.BodyMenu{
+    text-align: center;
+}
+.quantity-container {
+    display: flex;
+    align-items: center;
+}
+
+.quantity-btn {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 18px;
+}
+
+.quantity-btn:hover {
+    background-color: #0056b3;
+    
+}
+
+#quantity {
+    width: 40px;
+    text-align: center;
+    font-size: 15px;
+    margin: 0 10px;
+}
+.containeraccueil{
+    display:flexbox;
+}
